deploy/task-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: tsksvc-port
  type: NodePort
